feat: added removing background using U2Net library with rough thresholding

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 notes.txt
-.venv
+requirements1.txt
+ref.md
+.ven
+.devcontainer
 app/output
 app/__pycache__*
+app/src/__pycache__*
+app/src/U2Net/__pycache__*
+app/src/U2Net/model/__pycache__*
+app/src/U2Net/saved_models/u2net/u2net.pth
