--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-Pillow
-numpy
 argparse
+numpy==1.15.2
+scikit-image==0.14.0
+torch==1.0.0
+torchvision==0.2.1
+pillow==5.2.0
+opencv-python==3.4.0.12
