--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 argparse
-numpy==1.15.2
-scikit-image==0.14.0
-torch==1.0.0
-torchvision==0.2.1
-pillow==5.2.0
-opencv-python==3.4.0.12
+torch==2.2.2
+torchvision==0.17.2
+numpy==1.26.4
+pillow==10.2.0
+opencv-python==4.9.0.80
+scikit-image==0.22.0
+fastapi==0.110.0
+uvicorn==0.29.0
+matplotlib==3.10.7
+python-multipart
