--- a/fly.toml
+++ b/fly.toml
@@ -21,3 +21,8 @@ primary_region = 'iad'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
+
+[[mounts]]
+  source = "model_data"
+  destination = "/model"
+
